# repo

./: .cspell.json  .envrc  .mega-linter.yaml  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  Cargo.toml  Makefile  README.md  action.yaml  cspell.json  init.mk  pyproject.toml  pyrightconfig.json  ruff.toml
.github/: dependabot.yaml  sync-repo-settings.yaml
.github/actions/install/: action.yaml  action.yml
.github/actions/release/: action.yaml  changelog-config.js  changelog.json  main.py  main.sh
.github/linters/: .checkov.yml  .mega-linter.yaml  kics.config
.github/workflows/: ci.yaml  megalinter.yaml  pre-commit-update.yaml  repo.yaml  sync-all.yaml  sync-self.yaml  sync.yaml  test-install.yaml
common/: .pre-commit-config.yaml  Makefile  detect.sh  github.sh
common/.github/: sync-repo-settings.yaml
common/.github/workflows/: dependabot.yaml
megalinter-reports/: .cspell.json  megalinter-report.md
megalinter-reports/updated_sources/presets/: main.sh
megalinter-reports/updated_sources/scripts/: gh-clone-all.sh  sync-all.sh
presets/: main.sh
presets/common/: .pre-commit-config.yaml  Makefile  detect.sh  github.sh
presets/common/config/: labels.yaml  protection.json
presets/common/scripts/: github.sh  label-sync.sh
presets/megalinter/: .cspell.json  .mega-linter.yaml  Makefile
scripts/: cspell-init.py  gh-clone-all.sh  sync-all.sh  sync.sh
src/: main.rs  utils.rs
src/cmd/: mod.rs
src/proc/: mod.rs  prettier.rs
src/repo/actions/: __init__.pyi
src/schema/: mod.rs
templates/common/: .pre-commit-config.yaml
(+45 files in other folders)
