[dependencies]
anyhow = "1.0.80"
clap = { features = ["derive"], version = "4.5.1" }
glob = "0.3.1"
serde = { features = ["derive"], version = "1.0.197" }
serde_yaml = "0.9.32"
tokio = { features = ["full"], version = "1.36.0" }
tracing = "0.1.40"

[package]
edition = "2021"
name = "repo"
version = "0.1.0"
