[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  { email = "30631553+liblaf@users.noreply.github.com", name = "liblaf" },
]
dependencies = []
description = "Add your description here"
license = { text = "MIT" }
name = "liblaf-repo"
readme = "README.md"
requires-python = ">= 3.8"
version = "0.0.0"

[tool.hatch.build.targets.wheel]
packages = ["src/repo"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.rye]
dev-dependencies = []
managed = true
