[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
dependencies = [
  "githubkit>=0.11.10",
  "httpx[socks]>=0.27.2",
  "lazy-loader>=0.4",
  "loguru>=0.7.2",
  "pydantic-settings>=2.5.2",
  "rich>=13.8.1",
]
description = "Add your description here"
name = "repo"
readme = "README.md"
requires-python = ">=3.11"
version = "0.0.0"

[project.scripts]
install = "repo.actions.install:main"

[tool.uv]
dev-dependencies = ["icecream>=2.1.3"]
